fix weird filter spacing

--- a/src/Beastiepedia/Filter.module.css
+++ b/src/Beastiepedia/Filter.module.css
@@ -12,7 +12,7 @@
 .list {
   max-height: 80dvh;
   height: 80dvh;
-  align-content: stretch;
+  align-content: start;
   overflow-y: auto;
   user-select: none;
   width: calc(
